2014-09-10 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp: in constructor of bord, check the validify of
	pointer buf before using (to address a problem reported by Jerome
	Soumagne

2014-09-03 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: in ibis::text::stringSearch, adjust the LOGGER
	statements to prevent the end of file being recognied as an error
	(a problem reported by Marek mdmarek at gmail.com)
	* src/util.h: add ibis::util::flock to wrap around posix function
	flock, invoke util::flock to make sure an exclusive lock on the
	index is acquired before attempting to write the actual content of
	an index.  This is intended to address the problem reported by
	Petr Velan.

2014-09-02 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp: clarify the inline documentation on type handling
	in parseNamesAndTypes

2014-08-21 John Wu <John dot Wu at ACM dot org>
	* configure.ac:587 add case for darwin per suggestion from mdmarek
	at gmail.com

2014-08-12 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:3991 specify the size of the substring to compare
	prefix "unsigned" (a problem reported by Li Jun
	<lijunli2598@gmail.com>), add code to deal with arbitrary number
	of spaces after "unsigned"

2014-08-06 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.cpp, src/bitvector64.cpp: change constructor to
	compute the sizes of bitvector and bitvector64 during construction
	to avoid thread-safety issue with do_cnt, a problem reported by
	Dominique Prunier

2014-08-02 John Wu <John dot Wu at ACM dot org>
	* src/fastbit-config.h.in: add HAVE_SNPRINTF, change all uses of
	snprintf to check HAVE_SNPRINTF

2014-07-29 John Wu <John dot Wu at ACM dot org>
	* src/capi.cpp: in fastbit_part_list::find, return a nil pointer
	if the existing data partition is not readable.  This
	re-examination was prompted by an error report from Mike Carter.
	* src/dictionary.cpp: Mike Carter indentified a case of support